frontend/test/should_fail/defYield_005.grg
using defYield;

test t
{
	def x:B;
	y:B;
	pp:p(yield x, yield y);
}

pattern p(x:B, def z:B)
{
	y:B;
	yield { yield x = y; }
}

